<resources>
    <string name="app_name">DynamicUiChanges</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_image_fragment">Hide/Show image fragment</string>
    <string name="add_remove_view_fragment">Add/Remove view fragment</string>
    <string name="add_remove_alpha_fragment">Add/Remove alpha fragment</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="hidden">Hidden</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_alpha">Add Alpha</string>
    <string name="remove_alpha">Remove Alpha</string>
</resources>