<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartFragment">

    <Button
        android:id="@+id/buttonRandomImage"
        android:text="@string/random_image_fragment"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/yellow"/>

    <Button
        android:id="@+id/buttonAddRemoveView"
        android:text="@string/add_remove_view_fragment"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/green"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/buttonAddRemoveAlpha"
        android:text="@string/add_remove_alpha_fragment"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@color/dark_orange"/>


</LinearLayout>