<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HideShowImageFragment">

    <TextView
        android:id="@+id/textViewHidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text = "@string/hidden"
        android:textSize="32sp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageViewRandomImage"
        android:layout_width="@dimen/view_height"
        android:layout_height="@dimen/view_width"
        android:layout_gravity="center"
        android:src="@drawable/random_image"/>


    <Button
        android:id="@+id/buttonShowImage"
        android:text="@string/show"
        android:textColor="@color/black"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/green"/>

    <Button
        android:id="@+id/buttonHideImage"
        android:text="@string/hide"
        android:textColor="@color/black"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/view_margin"
        android:background="@color/red"/>

</FrameLayout>